vue_project/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vue-website
  template:
    metadata:
      labels:
        app: vue-website
    spec:
      containers:
      - name: vue-website
        image: vue:0.1.0
        ports:
        - containerPort: 8080
