vue_project/k8s/clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vue-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: vue-website
