vue_project/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: vue-clusterip
                port:
                  number: 8080
